@@ -19,7 +19,8 @@
 
 #CLASSIC=FALSE
 
-# DISTCLEAN - if TRUE, remove source code.
+# DISTCLEAN - if TRUE, remove the downloaded source code and completed
+# package archives.
 
 #DISTCLEAN=FALSE
 
